Homework almost done

--- a/src/test/resources/todoly.properties
+++ b/src/test/resources/todoly.properties
@@ -1,4 +1,6 @@
-browser=headless
-host=http://todo.ly/
+browser=chrome
+host=https://yopmail.com/
 user=bootcamp@mojix45.com
 pwd=12345
+email=auto123
+host2=https://todoist.com/
